spacing issues

--- a/sites/all/themes/vedio_library/css/global.styles.IE8.css
+++ b/sites/all/themes/vedio_library/css/global.styles.IE8.css
@@ -281,7 +281,7 @@ var {
 #page .region-menu-top{
     float: right;
     width: 510px;
-    margin-right: 50px;
+    margin-right: 38px;
 }
 
   /*
